# streamout

./: .clang-format  .cmake-format.yml  .codespellignore  .cspell.json  .gitattributes  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  README.md
.github/workflows/: CMake-ilcsoft  CMake-ilcsoft.yml  Docs.yml  LCIO-interface.yml  Linux-clang.yml  Linux-gcc.yml  ROOT-interface.yml  ROOT.yml  Rawdata-interface.yml  Windows.yml  macOS.yml  mega-linter.yml
.github/workflows/micromamba/: docs.yml
apps/: CMakeLists.txt
cmake/: Doxygen.cmake  GetCMakeMM.cmake  streamoutConfig.cmake.in
core/: CMakeLists.txt
core/include/: Constants.h  DIFPtr.h  DIFSlowControl.h  DIFUnpacker.h  SDHCAL_RawBuffer_Navigator.h  SDHCAL_buffer.h  SDHCAL_buffer_LoopCounter.h  SDHCAL_buffer_loop.h  Words.h
core/src/: DIFPtr.cc  DIFSlowControl.cc  DIFUnpacker.cc  SDHCAL_RawBuffer_Navigator.cc  SDHCAL_buffer.cc  SDHCAL_buffer_LoopCounter.cc
docs/: CMakeLists.txt  Doxyfile.in  README.md.in
interface/: CMakeLists.txt
interface/root/include/: ROOTtreeDest.h
interface/root/src/: ROOTtreeDest.cc  main_test_root_exe.cc
interface/standard/include/: DIFdataExample.h  textDump.h
interface/standard/src/: DIFdataExample.cc  main_test_exe.cc  textDump.cc
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/: AppVersion.h.in  Bits.h  Buffer.h  BufferLooper.h  BufferLooperCounter.h  DIFPtr.h  DIFSlowControl.h  DIFUnpacker.h  DetectorId.h  Exception.h  Filesystem.h  Formatters.h  Interface.h  Payload.h  Payload100.h  Payload150.h  PayloadLoader.h  PayloadParser.h  RawBufferNavigator.h  SDHCAL_RawBuffer_Navigator.h  SDHCAL_buffer.h  SDHCAL_buffer_LoopCounter.h  SDHCAL_buffer_loop.h  Timer.h  Utilities.h  VersionInfos.h  Words.h
libs/core/src/: Bits.cc  Buffer.cc  BufferLooperCounter.cc  DIFPtr.cc  DIFSlowControl.cc  DIFUnpacker.cc  Filesystem.cc  Formatters.cc  Payload100.cc  Payload150.cc  RawBufferNavigator.cc  SDHCAL_RawBuffer_Navigator.cc  SDHCAL_buffer.cc  SDHCAL_buffer_LoopCounter.cc
libs/interface/: CMakeLists.txt
libs/interface/Dump/: CMakeLists.txt
libs/interface/Dump/include/: textDump.h
libs/interface/Dump/src/: textDump.cc
libs/interface/LCIO/: CMakeLists.txt
libs/interface/LCIO/include/: LCIOWriter.h
libs/interface/LCIO/src/: LCIOWriter.cc
libs/interface/ROOT/: CMakeLists.txt
libs/interface/ROOT/include/: DIF.h  DIFLinkDef.h  Event.h  EventLinkDef.h  Hit.h  HitLinkDef.h  ROOTWriter.h  ROOTtreeDest.h
libs/interface/ROOT/src/: DIF.cc  Event.cc  Hit.cc  ROOTWriter.cc  ROOTtreeDest.cc
libs/interface/RawDataReader/: CMakeLists.txt
libs/interface/RawDataReader/include/: RawdataReader.h
libs/interface/RawDataReader/src/: RawdataReader.cc
libs/interface/root/: CMakeLists.txt
libs/interface/root/include/: ROOTtreeDest.h
libs/interface/root/src/: ROOTtreeDest.cc
libs/interface/standard/: CMakeLists.txt
libs/interface/standard/include/: textDump.h
libs/interface/standard/src/: textDump.cc
source/core/: CMakeLists.txt
source/core/include/: DIFPtr.h  SDHCAL_buffer_loop.h
source/interface/: CMakeLists.txt
tests/: Buffer.test.cc  CMakeLists.txt  CPPLINT.cfg  DumpReaderDumpWriter.cc  Exception.test.cc  Filesystem.test.cc  Formatters.test.cc  ROOT_IJK.test.cc  ROOTchecker.test.cc  RawdataLCIO.test.cc  RawdataROOT.test.cc  RawdataReader.test.cc  main_test_exe.cc  main_test_exe.cpp  main_test_lcio_exe.cc  main_test_root_exe.cc  main_test_root_exe.cpp
tests/GGstreamout/: CMakeLists.txt  CPPLINT.cfg  SdhcalPmrAccess.cc  SdhcalPmrAccess.hh  pmBuffer.hh  streamout.cpp
tests/data/: SMM_180922_033021_B0_R1045.dat.sha256  SMM_210616_040234_732873.dat.sha256
tests/include/: DIFdataExample.h
tests/src/: DIFdataExample.cc  DIFdataExample.cpp
