missive(WARN "Build with Dump interface")
add_library(Dump src/textDump.cc)
target_include_directories(Dump PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/streamout>)
target_link_libraries(Dump PUBLIC Streamout::Core)
add_library(Streamout::Interface::Dump ALIAS Dump)
target_link_libraries(Interfaces INTERFACE Streamout::Interface::Dump)
set_target_properties(Dump PROPERTIES PUBLIC_HEADER "include/textDump.h")
install(TARGETS Dump EXPORT dumpTargets INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/streamout/interfaces/dump" PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/streamout/interfaces/dump")
install(EXPORT dumpTargets FILE dumpTargets.cmake NAMESPACE streamout:: DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/streamout")
