missive(WARN "Build with LCIO interface")
include(Lcio)
add_library(LCIOWriter src/LCIOWriter.cc)
target_include_directories(LCIOWriter PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/streamout>)
target_link_libraries(LCIOWriter PUBLIC Streamout::Core LCIO::LCIO)
install(TARGETS LCIOWriter INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/streamout/interfaces/LCIOWriter" PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/streamout/interfaces/LCIOWriter")
add_library(Streamout::Interface::LCIOWriter ALIAS LCIOWriter)
set_target_properties(LCIOWriter PROPERTIES PUBLIC_HEADER "include/LCIOWriter.h")
target_link_libraries(Interfaces INTERFACE Streamout::Interface::LCIOWriter)
