missive(WARN "Build with RawdataReader interface")
include(Zlib-ng)
add_library(RawdataReader src/RawdataReader.cc)
target_include_directories(RawdataReader PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/streamout>)
set_target_properties(RawdataReader PROPERTIES PUBLIC_HEADER "include/RawdataReader.h")
target_link_libraries(RawdataReader PUBLIC Streamout::Core ZLIB::ZLIB)
install(TARGETS RawdataReader INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/streamout/interfaces/RawDataReader" PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/streamout/interfaces/RawDataReader")
add_library(Streamout::Interface::RawdataReader ALIAS RawdataReader)
target_link_libraries(Interfaces INTERFACE Streamout::Interface::RawdataReader)
