list(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
find_package(ROOT REQUIRED COMPONENTS Tree)
missives(WARN "Build with ROOT interface")
get_property(ROOT_CXX_STANDARD TARGET ROOT::Core PROPERTY INTERFACE_COMPILE_FEATURES)
add_library(ROOT "${CMAKE_CURRENT_SOURCE_DIR}/src/ROOTtreeDest.cc")
target_compile_features(ROOT PUBLIC ${ROOT_CXX_STANDARD})
target_include_directories(ROOT PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" ${ROOT_INCLUDE_DIRS})
target_link_libraries(ROOT PUBLIC core ${ROOT_LIBRARIES} )
install(TARGETS ROOT RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib PUBLIC_HEADER DESTINATION include)
